tests/parallelizable_command_cancel_recheck/parallelizable_command_cancel_recheck.exp

No errors thanks to lazy mode:
No errors!

The Flow server is currently in filesystem lazy mode and is only checking 0/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Autocomplete should kick off a recheck:
propA number
propB string

Now we should see the errors:
Error ----------------------------------------------------------------------------------------------- dependency.js:3:21

Cannot assign `123` to `mybug` because number [1] is incompatible with string [2].

   dependency.js:3:21
   3| let mybug: string = 123;
                          ^^^ [1]

References:
   dependency.js:3:12
   3| let mybug: string = 123;
                 ^^^^^^ [2]



Found 1 error

The Flow server is currently in filesystem lazy mode and is only checking 1/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
